ci(github): build client-only binaries for windows targets
Modify the CI workflow to build only the client binary for Windows targets.
This change introduces a new `client_only` flag in the matrix strategy
to differentiate between full builds and client-only builds. When
`client_only` is true, the build process uses `-p agentc` to build only
the client package. This optimization reduces build time and resources
for Windows environments where only the client is needed.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,10 +100,11 @@ jobs:
             target: aarch64-apple-darwin
             use_cross: false
 
-          # Windows builds
+          # Windows builds (client only)
           - os: windows-latest
             target: x86_64-pc-windows-msvc
             use_cross: false
+            client_only: true
 
     runs-on: ${{ matrix.os }}
     steps:
@@ -139,10 +140,18 @@ jobs:
 
       - name: Build for ${{ matrix.target }}
         run: |
-          if [ "${{ matrix.use_cross }}" = "true" ]; then
-            cross build --release --target ${{ matrix.target }}
+          if [ "${{ matrix.client_only }}" = "true" ]; then
+            if [ "${{ matrix.use_cross }}" = "true" ]; then
+              cross build --release --target ${{ matrix.target }} -p agentc
+            else
+              cargo build --release --target ${{ matrix.target }} -p agentc
+            fi
           else
-            cargo build --release --target ${{ matrix.target }}
+            if [ "${{ matrix.use_cross }}" = "true" ]; then
+              cross build --release --target ${{ matrix.target }}
+            else
+              cargo build --release --target ${{ matrix.target }}
+            fi
           fi
         shell: bash
 
