--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -209,11 +209,10 @@ jobs:
         with:
           path: artifacts
 
-      - name: Install AWS CLI
+      - name: Verify AWS CLI
         run: |
-          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-          unzip awscliv2.zip
-          sudo ./aws/install
+          aws --version
+          echo "AWS CLI is already installed"
 
       - name: Configure AWS CLI for R2
         env:
