feat(agentc): add dynamic proxy support for local ports
- Add `urlencoding` dependency to handle query parameter encoding
- Implement `handle_dynamic_proxy` to forward requests to local services
- Support routing pattern `/proxy/{port}/{*path}` with query parameters
- Enhance router to handle wildcard path parameters
- Register new proxy routes in the router configuration
- Set default value for `command_mode` flag to true

--- a/agentc/Cargo.toml
+++ b/agentc/Cargo.toml
@@ -20,6 +20,7 @@ regex = "1.12.2"
 chrono = "0.4"
 hostname = "0.3"
 tokio-util = "0.7"
+urlencoding = { workspace = true }
 # hyper = { version = "1", features = ["server", "http1"] }
 hyper-util = { version = "0.1", features = ["tokio", "server", "service", "http1"] }
 http = "0.2"
