--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ rand = "0.8"
 clap = { version = "4", features = ["derive"] }
 futures-util = "0.3"
 anyhow = "1"
+thiserror = "1"
 tracing = "0.1"
 tracing-subscriber = "0.3"
 bytes = "1"
