--- a/agentc/Cargo.toml
+++ b/agentc/Cargo.toml
@@ -9,6 +9,7 @@ common = { path = "../common" }
 tokio = { workspace = true }
 serde = { workspace = true }
 anyhow = { workspace = true }
+thiserror = { workspace = true }
 uuid = { workspace = true, features = ["v4", "v5"] }
 clap = { workspace = true }
 tracing = { workspace = true }
