--- a/arp-client/Cargo.toml
+++ b/arp-client/Cargo.toml
@@ -1,11 +1,11 @@
 
 [package]
-name = "agentc"
+name = "arpc"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-common = { path = "../common" }
+common = { path = "../arp-common" }
 tokio = { workspace = true }
 serde = { workspace = true }
 anyhow = { workspace = true }
