feat(arp-client): add dual logging to file and terminal
- Add `tracing-appender` for daily rolling log files
- Configure `tracing-subscriber` with level filtering
- Log all levels to file and INFO+ to terminal
- Create log directory using `dirs::data_local_dir()`

Also:
- Update `tracing-subscriber` to enable `env-filter` feature
- Adjust log levels for several messages (e.g., switch some `info!` to `debug!`)
- Display public URL with token on startup
- Improve startup log message with emoji and label clarification

--- a/arp-client/Cargo.toml
+++ b/arp-client/Cargo.toml
@@ -12,7 +12,8 @@ anyhow = { workspace = true }
 uuid = { workspace = true, features = ["v4", "v5"] }
 clap = { workspace = true }
 tracing = { workspace = true }
-tracing-subscriber = { workspace = true }
+tracing-subscriber = { workspace = true, features = ["env-filter"] }
+tracing-appender = "0.2"
 serde_json = { workspace = true }
 which = { workspace = true }
 dirs = "6.0.0"
