docs(readme): update project name references and formatting
- Replace 'agentx' with 'arp' in artifact names and download scripts
- Adjust spacing in README diagrams for better readability
- Update installation script references to use 'arp' naming convention

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -193,7 +193,7 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: agentx-${{ matrix.target }}
+          name: arp-${{ matrix.target }}
           path: artifacts/*
           if-no-files-found: error
 
