--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,15 @@ tracing-subscriber = "0.3"
 bytes = "1"
 which = "7"
 urlencoding = "2.1"
+
+[profile.release]
+strip = true  # Automatically strip symbols from the binary.
+opt-level = "z"  # Optimize for size.
+lto = true
+codegen-units = 1
+panic = "abort"
+
+[profile.dev]
+opt-level = 1
+[profile.dev.package."*"]
+opt-level = 3
