--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,9 @@ on:
         description: "Version tag to build (e.g. v1.2.3)"
         required: true
 
+permissions:
+  contents: write  # Required for creating releases and uploading assets
+
 env:
   CARGO_TERM_COLOR: always
   RUST_BACKTRACE: 1
